src/orgs/usa/data-model/objects/Appointment__c/Appointment__c.object-meta.xml
<CustomObject>
    <label>Appointment</label>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Appointment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>