src/orgs/usa/data-model/objects/Appointment__c/fields/AppointmentComment__c.field-meta.xml
<CustomField>
    <fullName>AppointmentComment__c</fullName>
    <label>Appointment Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>