src/orgs/usa/data-model/objects/Appointment__c/fields/AppointmentDateTime__c.field-meta.xml
<CustomField>
    <fullName>AppointmentDateTime__c</fullName>
    <label>Appointment Date Time</label>
    <type>DateTime</type>
</CustomField>