src/orgs/usa/data-model/objects/Appointment__c/fields/AppointmentType__c.field-meta.xml
<CustomField>
    <fullName>AppointmentType__c</fullName>
    <label>Appointment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>