src/orgs/usa/data-model/objects/Appointment__c/fields/CalendarName__c.field-meta.xml
<CustomField>
    <fullName>CalendarName__c</fullName>
    <label>Calendar Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>