src/orgs/usa/data-model/objects/Appointment__c/fields/CancelationDateTime__c.field-meta.xml
<CustomField>
    <fullName>CancelationDateTime__c</fullName>
    <label>Cancelation Date Time</label>
    <type>DateTime</type>
</CustomField>