src/orgs/usa/data-model/objects/Appointment__c/fields/ConfirmationDateTime__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationDateTime__c</fullName>
    <label>Confirmation Date Time</label>
    <type>DateTime</type>
</CustomField>