src/orgs/usa/data-model/objects/Appointment__c/fields/ConfirmationStatus__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationStatus__c</fullName>
    <label>Confirmation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>