src/orgs/usa/data-model/objects/Appointment__c/fields/CptCode__c.field-meta.xml
<CustomField>
    <fullName>CptCode__c</fullName>
    <label>CPT Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>