src/orgs/usa/data-model/objects/Appointment__c/fields/EmrAppointmentId__c.field-meta.xml
<CustomField>
    <fullName>EmrAppointmentId__c</fullName>
    <externalId>true</externalId>
    <label>Artemis Appointment Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>