src/orgs/usa/data-model/objects/Appointment__c/fields/EmrServer__c.field-meta.xml
<CustomField>
    <fullName>EmrServer__c</fullName>
    <label>Artemis Server</label>
    <referenceTo>EmrServer__c</referenceTo>
    <relationshipLabel>EmrServerAppointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>