src/orgs/usa/data-model/objects/Appointment__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please make sure to select a Location account record.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>IVIRMA Location Account</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>LocationAppointments</relationshipName>
    <type>Lookup</type>
</CustomField>