src/orgs/usa/data-model/objects/Appointment__c/fields/RawLocationId__c.field-meta.xml
<CustomField>
    <fullName>RawLocationId__c</fullName>
    <description>Raw location Id received on the payload. To be stored separately in case the matching location does not exist in the system (yet?) and later can be correctly assigned upon its creation.</description>
    <label>Raw Location Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>