src/orgs/usa/data-model/objects/Appointment__c/fields/RawPatientId__c.field-meta.xml
<CustomField>
    <fullName>RawPatientId__c</fullName>
    <description>Raw provider Id received on the payload. To be stored separately in case the matching patient does not exist in the system (yet?) and later can be correctly assigned upon its creation.</description>
    <label>Raw Patient Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>