src/orgs/usa/data-model/objects/Appointment__c/fields/RawProviderId__c.field-meta.xml
<CustomField>
    <fullName>RawProviderId__c</fullName>
    <description>Raw provider Id received on the payload. To be stored separately in case the matching provider does not exist in the system (yet?) and later can be correctly assigned upon its creation.</description>
    <label>Raw Provider Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>