src/orgs/usa/data-model/objects/Appointment__c/fields/ScheduledBy__c.field-meta.xml
<CustomField>
    <fullName>ScheduledBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduled by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SchedulerAppointments</relationshipName>
    <type>Lookup</type>
</CustomField>