src/orgs/usa/data-model/objects/Appointment__c/fields/ScheduledDateTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDateTime__c</fullName>
    <label>Scheduled Date Time</label>
    <type>DateTime</type>
</CustomField>