src/orgs/usa/data-model/objects/Appointment__c/fields/SigninFlag__c.field-meta.xml
<CustomField>
    <fullName>SigninFlag__c</fullName>
    <label>Signin Flag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>